--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -73,7 +73,7 @@
       "hashSize": "ハッシュテーブルのサイズ",
       "config": {
         "title": "エンジンの重み付け",
-        "mix9lite": "Mix9Lite NNUE",
+        "mix9svq": "Mix9svq NNUE",
         "220723": "従来型（2022/07/23）",
         "210901": "従来型（2021/09/01）"
       },
