--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -73,7 +73,7 @@
       "hashSize": "Размер хеш-таблицы",
       "config": {
         "title": "Весовые коэффициенты движка",
-        "mix9lite": "Mix9Lite NNUE",
+        "mix9svq": "Mix9svq NNUE",
         "220723": "Классический (2022/07/23)",
         "210901": "Классический (2021/09/01)"
       },
