--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -73,7 +73,7 @@
       "hashSize": "置换表大小",
       "config": {
         "title": "引擎权重",
-        "mix9lite": "Mix9Lite NNUE",
+        "mix9svq": "Mix9svq NNUE",
         "220723": "传统(2022/07/23)",
         "210901": "传统(2021/09/01)"
       },
